k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marriage-images-service
  namespace: marriage-images
  labels:
    app: marriage-images
spec:
  selector:
    app: marriage-images
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
